[package]
name = "vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base-62 = "0.1"
byte-unit = { version = "5.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
directories = "6.0"
futures = "0.3"
ipnet = { version = "2.11", features = ["serde"] }
rand_core = { version = "0.9", features = ["os_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
