[package]
name = "vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base-62 = "0.1"
byte-unit = { version = "5.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
directories = "6.0"
futures = "0.3"
ipnet = { version = "2.11", features = ["serde"] }
qapi = { version = "0.15", features = ["tokio", "qmp"] }
rand_core = { version = "0.9", features = ["os_rng"] }
reqwest = { version = "0.12.19", features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["rt-multi-thread", "process"] }
url = { version = "2.5", features = ["serde"] }
